# SD_ejer1

Fuente/: ArchConfiguracion.cpp  PlataformaReal.cpp  PlataformaReal.h  PlataformaVirtual.cpp  SalidaPorPantalla.cpp  iPlataformaSacar.h  mainRobotArmar.cpp  mainRobotFrec.cpp
comun/: ArchConfiguracion.cpp  ArchConfiguracion.h  ColaMensajes.cpp  ColaMensajes.h  GestorArch.cpp  GestorArch.h  MemoriaCompartida.cpp  MemoriaCompartida.h  SalidaPorPantalla.cpp  SalidaPorPantalla.h  Semaforo.cpp  Semaforo.h  Socket.cpp  Socket.h  enviar.cpp  inet.h  macros.h  recibir.cpp  tcpopact.cpp  tcpoppas.cpp
comun/Debug/: ArchConfiguracion.d  ColaMensajes.d  GestorArch.d  MemoriaCompartida.d  SalidaPorPantalla.d  Semaforo.d  Socket.d  enviar.d  makefile  recibir.d  subdir.mk  tcpopact.d  tcpoppas.d
ejer1/Fuente/: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  ColaComponentes.cpp  ColaComponentes.h  ColaMensajes.cpp  ColaMensajes.h  ComponenteRobot.cpp  ComponenteRobot.h  Definiciones.h  MemoriaCompartida.cpp  MemoriaCompartida.h  Plataforma.cpp  Plataforma.h  PlataformaVirtual.cpp  PlataformaVirtual.h  SemRobots.cpp  SemRobots.h  iPlataformaPoner.h  mainActivador.cpp  mainComponente.cpp  mainLanzador.cpp  mainPlataforma.cpp  mainRobotArmar.cpp  mainRobotFrec.cpp
ejer1/diagramas/: diagramas.asta
ejer11/: Algoritmo_LectoEscritores.txt  CU_AdministrarMoneda.txt
ejer3/Fuente/: ArchConfiguracion.h  CMakeLists.txt  ColaComponentes.cpp  ColaComponentes.h  ColaMensajes.cpp  ColaMensajes.h  Definiciones.h  GestorPedidos.cpp  GestorPedidos.h  SalidaPorPantalla.cpp  SalidaPorPantalla.h  iProcesar.h  iSolicitar.h  mainEmisor.cpp  mainLanzador.cpp  mainReceptor.cpp
ejer3v1/Fuente/: CMakeLists.txt  ColaDirecciones.cpp  ColaDirecciones.h  Definiciones.h  GestorActores.cpp  GestorActores.h  GestorPedidos.cpp  iProcesar.h  iSolicitar.h  mainAsistidor.cpp  mainConsReceptor.cpp  mainConsServidor.cpp  mainConsumidor.cpp  mainLanzador.cpp  mainProdEmisor.cpp  mainProdServidor.cpp  mainProductor.cpp  mainServidor.cpp
ejer5/: CU_PasearMontaña.txt  CU_PaseoPorMontaña.txt
ejer5/Fuente/: AreaPersonas.cpp  AreaPersonas.h  CMakeLists.txt  ColaBloqueos.cpp  ColaBloqueos.h  ColaComponentes.cpp  ColaComponentes.h  CompCableCarril.cpp  CompCableCarril.h  CompPersona.cpp  CompPersona.h  Definiciones.h  Mutex.cpp  Mutex.h  Sala.cpp  Sala.h  SalaVirtual.cpp  SalaVirtual.h  iSalaCableCarril.h  iSalaPersona.h  mainCC.cpp  mainCompCC.cpp  mainCompPersona.cpp  mainLanzador.cpp  mainPersona.cpp  mainProductor.cpp
ejer5/diagramas/: Diagramas.asta
ejer7/: CU_ConstruirAutomovil.txt
ejer7/Fuente/: CMakeLists.txt  ColaComponentes.cpp  ColaComponentes.h  ColaPiezas.cpp  ColaPiezas.h  CompEstacion.cpp  CompEstacion.h  Definiciones.h  Estacion.cpp  Estacion.h  EstacionVirtual.cpp  EstacionVirtual.h  iEstacion.h  mainComponente.cpp  mainEstacion.cpp  mainLanzador.cpp
